<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
  	<modules>
  		<module>sessionBuilder-core</module>
  		<module>sessionBuilder-swing</module>
  		<module>sessionBuilder-it</module>
  		<module>sessionBuilder-e2e</module>
  		<module>sessionBuilder-report</module>
  	</modules>
 
 	<groupId>com.sessionBuilder</groupId>
	<artifactId>sessionBuilder</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<junit.version>4.13.2</junit.version>
		<compiler.version>3.13.0</compiler.version>
		<java.version>17</java.version>
		<assertj.version>3.27.0</assertj.version>
		<mockito.version>5.14.2</mockito.version>
		<report.version>3.5.2</report.version>
		<pitest.version>1.16.0</pitest.version>
		<jacoco.version>0.8.12</jacoco.version>
		<coveralls.version>4.5.0-M6</coveralls.version>
		<testcontainer.version>1.20.4</testcontainer.version>
		<picocli.version>4.7.6</picocli.version>
		
		<sonar.version>5.0.0.4389</sonar.version>
		<sonar.coverage.exclusions>**/AppModule.java,**/SessionBuilderApplication.java</sonar.coverage.exclusions>
		<sonar.issue.ignore.multicriteria>e11,e12,e13,e14,e15,e16</sonar.issue.ignore.multicriteria>
		<sonar.issue.ignore.multicriteria.e11.ruleKey>java:S117</sonar.issue.ignore.multicriteria.e11.ruleKey>
		<sonar.issue.ignore.multicriteria.e11.resourceKey>**/*</sonar.issue.ignore.multicriteria.e11.resourceKey>
		<sonar.issue.ignore.multicriteria.e12.ruleKey>java:S2699</sonar.issue.ignore.multicriteria.e12.ruleKey>
		<sonar.issue.ignore.multicriteria.e12.resourceKey>**/TopicAndSessionManagerTest.java</sonar.issue.ignore.multicriteria.e12.resourceKey>
		<sonar.issue.ignore.multicriteria.e13.ruleKey>java:S5778</sonar.issue.ignore.multicriteria.e13.ruleKey>
		<sonar.issue.ignore.multicriteria.e13.resourceKey>**/*Test.java</sonar.issue.ignore.multicriteria.e13.resourceKey>
		<sonar.issue.ignore.multicriteria.e14.ruleKey>java:S5785</sonar.issue.ignore.multicriteria.e14.ruleKey>
		<sonar.issue.ignore.multicriteria.e14.resourceKey>**/*Test.java</sonar.issue.ignore.multicriteria.e14.resourceKey>
		<sonar.issue.ignore.multicriteria.e15.ruleKey>java:S120</sonar.issue.ignore.multicriteria.e15.ruleKey>
		<sonar.issue.ignore.multicriteria.e15.resourceKey>**/*</sonar.issue.ignore.multicriteria.e15.resourceKey>
		<sonar.issue.ignore.multicriteria.e16.ruleKey>java:S3577</sonar.issue.ignore.multicriteria.e16.ruleKey>
		<sonar.issue.ignore.multicriteria.e16.resourceKey>**/*</sonar.issue.ignore.multicriteria.e16.resourceKey>
	</properties>
	
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>${assertj.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.google.inject</groupId>
			<artifactId>guice</artifactId>
			<version>7.0.0</version>
		</dependency>
	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.sessionBuilder</groupId>
				<artifactId>sessionBuilder-bom</artifactId>
				<version>0.0.1-SNAPSHOT</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
			<dependency>
				<groupId>org.postgresql</groupId>
				<artifactId>postgresql</artifactId>
				<version>42.7.3</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>jakarta.persistence</groupId>
				<artifactId>jakarta.persistence-api</artifactId>
				<version>3.1.0</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate.orm</groupId>
				<artifactId>hibernate-core</artifactId>
				<version>6.4.4.Final</version>
			</dependency>
			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-swing-junit</artifactId>
				<version>3.17.1</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>postgresql</artifactId>
				<version>${testcontainer.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>info.picocli</groupId>
				<artifactId>picocli</artifactId>
				<version>${picocli.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${compiler.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>${report.version}</version>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.2.5</version>
					<configuration>
						<argLine>--add-opens java.base/java.util=ALL-UNNAMED @{argLine}</argLine>
						<systemPropertyVariables>
							<postgres.mapped.port>${postgres.mapped.port}</postgres.mapped.port>
						</systemPropertyVariables>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${jacoco.version}</version>
						<configuration>
							<excludes>
								<exclude>**.*Test.class</exclude>
								<exclude>**.SessionBuilderApplication.class</exclude>
								<exclude>**/*$*.class</exclude>
								<exclude>**/AppModule.class</exclude>
								<exclude>**/SessionBuilderApplication.class</exclude>
								<exclude>**.*E2E.class</exclude>
							</excludes>
						</configuration>
				</plugin>
				<plugin>
					<groupId>org.pitest</groupId>
					<artifactId>pitest-maven</artifactId>
					<version>${pitest.version}</version>
					<configuration>
						<targetClasses>
							<param>com.sessionBuilder.core.*</param>
						</targetClasses>
						<excludedClasses>
							<param>**.*Test</param>
							<param>**.*It</param>
							<param>**.AppModule.class</param>
						</excludedClasses>
						<targetTests>
							<param>com.sessionBuilder.core.*Test</param>
						</targetTests>
						<excludedGroups>
							<param>integration</param>
						</excludedGroups>
						<mutators>
							<mutator>DEFAULTS</mutator>
						</mutators>
						<mutationThreshold>85</mutationThreshold>
						<outputFormats>
							<outputFormat>HTML</outputFormat>
							<outputFormat>XML</outputFormat>
						</outputFormats>	
						<reportsDirectory>${project.build.directory}/pit-reports</reportsDirectory>
					</configuration>
				</plugin>
				<plugin>
  					<groupId>org.codehaus.mojo</groupId>
  					<artifactId>build-helper-maven-plugin</artifactId>
  					<version>3.6.0</version>
  					<executions>
  						<execution>
  							<id>add-test-source</id>
  							<phase>generate-test-sources</phase>
  							<goals>
  								<goal>add-test-source</goal>
  							</goals>
  							<configuration>
  								<sources>
  									<source>src/it/java</source>
  									<source>src/end-to-end/java</source>
  								</sources>
  							</configuration>
  						</execution>
  					</executions>
  				</plugin>
  				<plugin>
  					<groupId>org.apache.maven.plugins</groupId>
  					<artifactId>maven-failsafe-plugin</artifactId>
  					<version>3.5.2</version>
  					<executions>
  						<execution>
  							<id>default-it</id>
  							<goals>
  								<goal>integration-test</goal>
  								<goal>verify</goal>
  							</goals>
  						</execution>
  						<execution>
  							<id>e2e-tests</id>
  							<goals>
  								<goal>integration-test</goal>
  								<goal>verify</goal>
  							</goals>
  							<configuration>
  								<excludes>
  									<exclude>**/*It.java</exclude>
  								</excludes>
  								<includes>
  									<include>**/*E2E.java</include>
  								</includes>
  							</configuration>
  						</execution>
  					</executions>
  					<configuration>
  						<systemPropertyVariables>
  							<postgres.mapped.port>${postgres.mapped.port}</postgres.mapped.port>
  						</systemPropertyVariables>
  					</configuration>
  				</plugin>
  				<plugin>
  					<groupId>org.sonarsource.scanner.maven</groupId>
  					<artifactId>sonar-maven-plugin</artifactId>
  					<version>${sonar.version}</version>
  				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	
	<!--PROFILES-->
	<profiles>
		<profile>
			<id>jacoco</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>jacoco-check</id>
								<goals>
									<goal>check</goal>
								</goals>
								<configuration>
									<rules>
										<rule>
											<element>PACKAGE</element>
											<limits>
												<limit>
													<counter>LINE</counter>
													<!--null for now-->
													<minimum>0.0</minimum>
												</limit>
											</limits>
										</rule>
									</rules>
								</configuration>
							</execution>
							<execution>
								<id>prepare-agent</id>
								<goals>
									<!--automatic binding: initialize(default)-->
									<goal>prepare-agent</goal>
								</goals>
							</execution>
							<execution>
								<id>report</id>
								<goals>
									<goal>report</goal>
								</goals>
								<phase>verify</phase>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>mutation-testing</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.pitest</groupId>
						<artifactId>pitest-maven</artifactId>
						<executions>
							<execution>
								<goals>
									<goal>mutationCoverage</goal>
								</goals>
								<phase>verify</phase>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>sonarqube</id>
			<properties>
				<sonar.host.url>http://localhost:9000</sonar.host.url>
			</properties>
		</profile>
		<profile>
			<id>sonarcloud</id>
			<properties>
				<sonar.host.url>https://sonarcloud.io</sonar.host.url>
				<sonar.organization>edoardof01</sonar.organization>
				<sonar.projectKey>edoardof01_sessionBuilder</sonar.projectKey>
			</properties>
		</profile>
	</profiles>	
</project>

